Crex/tests/type_declarations/intersection_types/invalid_types/invalid_true_type.crxt
--TEST--
true type cannot take part in an intersection type
--FILE--
<?crx

function foo(): true&Iterator {}

?>
--EXPECTF--
Fatal error: Type true cannot be part of an intersection type in %s on line %d
